sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:16: error: value update is not a member of List[Int]
      if (getCouleurJoueur(i,j) != -1) nbJoueursParCouleur(getCouleurJoueur(i,j)) = 1;
                                       ^